--- a/cytoscapeweb/trunk/website/src/css/content/demo.css
+++ b/cytoscapeweb/trunk/website/src/css/content/demo.css
@@ -2,7 +2,9 @@
 body.demo { left: 0; width: 100%; margin: 0; line-height: 1; }
 #header-resizer { height: 0; width: 0; }
 body.demo #logo { margin-left: 1em; margin-right: 5em; }
-body.demo #header .text { margin-top: 2.5em; color: #707070; }
+body.demo #header .text { margin: 0; }
+body.demo #header .text * { text-align: left; }
+body.demo #header h1 { clear: none; padding: 0; margin-top: 0.7em; border-bottom: 0px solid; }
 body.demo #page, body.demo #copyright, body.demo #navigation_links, body.demo #search, body.demo #content, body.demo #footer { display: none; }
 #cytoweb, #side { border: 1px #cfcfcf solid; -moz-box-shadow: 0 0 50px #bbb; -webkit-box-shadow: 0 0 50px #bbb; box-shadow: 0 0 50px #bbb; }
 .ui-dialog { -moz-box-shadow: 0 0 50px #bbb; -webkit-box-shadow: 0 0 50px #bbb; box-shadow: 0 0 50px #bbb; }
