--- a/cytoscapeweb/trunk/website/src/css/content/contact.css
+++ b/cytoscapeweb/trunk/website/src/css/content/contact.css
@@ -1,8 +1,8 @@
-#content .left label { display: block; margin: 2em 0 0 0; }
-#content .left input, #content .left textarea  { width: 25em; }
-#content .left input[disabled], #content .left textarea[disabled] { color: #000000; }
-#content .left button { margin: 2em 0 0 0; }
-#content .left textarea { height: 10em; } 
+#content form label { display: block; margin: 2em 0 0 0; }
+#content form input, #content form textarea  { width: 25em; }
+#content form input[disabled], #content form textarea[disabled] { color: #000000; }
+#content form button { margin: 2em 0 0 0; }
+#content form textarea { height: 10em; } 
 .example { color: #909090; display: none; }
 .ui-validation-completion { margin-left: -20px; margin-top: 3px; }
 #error_msg { display: none; }
