--- a/cytoscapeweb/trunk/website/src/css/content/demo.css
+++ b/cytoscapeweb/trunk/website/src/css/content/demo.css
@@ -2,7 +2,8 @@
 body.demo { left: 0; width: 100%; margin: 0; line-height: 1; }
 #header-resizer { height: 0; width: 0; }
 body.demo #logo { margin-left: 1em; }
-body.demo #header .message { padding: 0.2em 0.2em 0 0.2em; margin: 0.5em; position: absolute; bottom: 0; left: 210px; background-color: #fffff0; border: 1px solid #ffff00; }
+body.demo #header .message { padding: 0.2em 0.2em 0 0.2em; margin: 0.5em; position: absolute; bottom: 0; left: 210px; }
+body.demo #header .message p { background-color: #fffff0; border: 1px solid #ffff00; }
 body.demo #header .message * { text-align: left; }
 body.demo #header .title { text-transform: uppercase; font-weight: bold; }
 body.demo #page, body.demo #copyright, body.demo #navigation_links, body.demo #search, body.demo #content, body.demo #footer { display: none; }
@@ -258,7 +259,7 @@ input[type=button].ui-state-default { cursor: pointer; }
 #vizmapper .property .continuous, #vizmapper .property .discrete { position: relative; border: 1px solid #ababab; border-width: 0 1px 1px 1px; padding: 1em; clear: both; max-height: 15em; overflow: auto; }
 #vizmapper .property .continuous_min_name { display: block; padding-top: 0.5em; }
 #vizmapper .property .continuous_max_name { display: block; }
-#vizmapper .property .continuous .line { width: 5em; position: absolute; height: 100%; z-index: -1; top: 0; right: 0; }
+#vizmapper .property .continuous .line { width: 5em; position: absolute; height: 100%; z-index: 1; top: 0; right: 0; }
 #vizmapper .property .continuous .arrow_top { position: absolute; left: 50%; margin-left: -8px; margin-top: 1em; top: 0; }
 #vizmapper .property .continuous .arrow_bottom { position: absolute; left: 50%; margin-left: -8px; margin-bottom: 1em; bottom: 0; }
 #vizmapper .property .continuous .middle { text-align: center; position: absolute; top: 50%; margin-top: -0.75em; width: 100%; }
