making a workaround just for ie since it can't render floats properly
git-svn-id: http://chianti.ucsd.edu/svn@20795 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscapeweb/trunk/website/src/css/layout.css
+++ b/cytoscapeweb/trunk/website/src/css/layout.css
@@ -91,7 +91,7 @@ iframe { display: block; }
 #page_navigation a:hover { text-decoration: underline; }
 
 /* page layouts */
-#content { clear: both; float: left; }
+#content { clear: both; float: left; width: 950px; }
 
 	/* full space layout */
 	#content.full { padding: 25px; }
