--- a/cytoscape/trunk/webstart/src/main/jnlp/template.vm
+++ b/cytoscape/trunk/webstart/src/main/jnlp/template.vm
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<jnlp
-    spec="$jnlpspec"
-    codebase="$project.Url"
-    href="$outputFile">
+<jnlp codebase="$project.Url" href="$outputFile">
   <information>
     <title>Cytoscape</title>
     <vendor>Cytoscape Consortium</vendor>
