--- a/csplugins/trunk/soc/jgao/IDMapping/src/csplugins/id/mapping/ui/IDMappingSourceConfigDialog.form
+++ b/csplugins/trunk/soc/jgao/IDMapping/src/csplugins/id/mapping/ui/IDMappingSourceConfigDialog.form
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.1" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
@@ -48,8 +48,9 @@
       <SubComponents>
         <Container class="javax.swing.JSplitPane" name="sourceDescSplitPane">
           <Properties>
+            <Property name="dividerLocation" type="int" value="300"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[800, 150]"/>
+              <Dimension value="[800, 500]"/>
             </Property>
           </Properties>
           <AuxValues>
@@ -66,6 +67,9 @@
           <SubComponents>
             <Container class="javax.swing.JScrollPane" name="srcTreeScrollPane">
               <Properties>
+                <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[200, 200]"/>
+                </Property>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[300, 500]"/>
                 </Property>
