--- a/cytoscapeweb/trunk/website/src/css/content/faq.css
+++ b/cytoscapeweb/trunk/website/src/css/content/faq.css
@@ -1,2 +1,4 @@
 p.question { font-size: 1.25em;  }
-p.answer + p.question { margin-top: 1em; }
+p.answer + p.question { margin-top: 0.5em; }
+p.answer { padding-left: 1.5em; }
+p.question, p.answer { padding-top: 0.25em; padding-bottom: 0.25em; }
