Absolute URLs are modifed to deploy to sourceforge site.
git-svn-id: http://chianti.ucsd.edu/svn@21839 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/css/shared/wiki.css
+++ b/new_cytoscape_website/trunk/css/shared/wiki.css
@@ -60,7 +60,7 @@ input {
 	color:#fff;
 	margin: 0px auto;
 	padding: 10px 10px 5px 10px;
-	background: no-repeat url(http://chianti.ucsd.edu/~kono/cytoscape/images/title.png) #000;
+	background: no-repeat url(http://www.cytoscape.org/images/title.png) #000;
 	line-height: 100%;
 	border-radius: 0.7em;
 	-webkit-border-radius: 0.7em;
