--- a/cytoscapeweb/trunk/website/src/css/content/demo.css
+++ b/cytoscapeweb/trunk/website/src/css/content/demo.css
@@ -178,7 +178,7 @@ input[type=button].ui-state-default { cursor: pointer; }
 .save_screen .description { text-align: center; width: 100%; }
 .save_screen .selections { height: 250px; width: 600px; margin: -125px auto 0 auto; top: 160px; position: relative; text-align: center; }
 .save_screen .selections .data_formats { margin: 0 auto; text-align: center; width: 468px; }
-.save_screen .selections .image_formats { margin: 0 auto; text-align: center; width: 312px; }
+.save_screen .selections .image_formats { margin: 0 auto; text-align: center; width: 468px; }
 .save_screen .selections h2 { padding-top: 0; }
 .save_screen .selection { cursor: pointer; float: left; width: 128px; margin: 1em; position: relative; z-index: 9999; }
 .save_screen .selection label { display: block; position: absolute; right: 20px; top: 8px; z-index: 10000; color: #707070; }
@@ -188,6 +188,7 @@ input[type=button].ui-state-default { cursor: pointer; }
 #save_graphml .icon { background: url("../../img/icons/oxygen/128x128/mimetypes/xml.png"); }
 #save_sif .icon { background: url("../../img/icons/sif.png"); }
 #save_pdf .icon { background: url("../../img/icons/oxygen/128x128/mimetypes/pdf.png"); }
+#save_svg .icon { background: url("../../img/icons/svg.png"); }
 #save_png .icon { background: url("../../img/icons/png.png"); }
 
 /* screens */
