--- a/cytoscapeweb/trunk/website/src/css/content/demo.css
+++ b/cytoscapeweb/trunk/website/src/css/content/demo.css
@@ -120,7 +120,7 @@ input[type=button].ui-state-default { cursor: pointer; }
 #filter .string_search { display: block; width: 50%; }
 #filter .silder_area { clear: both; }
 #filter .slider { margin: 0 4em; }
-#filter .slider_min, #filter .slider_max { color: #707070; width: 3.125em; display: block; line-height: 1em; font-size: 0.8em; }
+#filter .slider_min, #filter .slider_max { color: #707070; width: 3.125em; display: block; line-height: 1em; font-size: 0.8em; overflow: hidden; }
 #filter .slider_min { float: left; text-align: right; padding-right: 1.25em;  }
 #filter .slider_max { float: right; text-align: left; padding-left: 1.25em;  }
 #filter .stats_area { margin: 0 4em; height: 1em; position: relative; }
