updates to retreat website
git-svn-id: http://chianti.ucsd.edu/svn@24135 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/CytoscapeRetreat2011/main.css
+++ b/new_cytoscape_website/trunk/CytoscapeRetreat2011/main.css
@@ -73,7 +73,8 @@ small {
 }
 
 a {
-	color:#111;
+	color:#51F;
+	text-decoration:underline;
 }
 
 .clear {
@@ -192,6 +193,12 @@ a {
 
 #nav div.inactive {
 	color:#CCC;
+}
+
+#nav a {
+	color:#111;
+	outline: none;
+	text-decoration:none;
 }
 
 #footer small {
