Added the GS plugins.
git-svn-id: http://chianti.ucsd.edu/svn@24689 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsd/ruschein/genomespace-webstart/src/main/jnlp/template.vm
+++ b/csplugins/trunk/ucsd/ruschein/genomespace-webstart/src/main/jnlp/template.vm
@@ -52,6 +52,10 @@
     <argument>edu.ucsd.bioeng.coreplugin.tableImport.TableImportPlugin</argument>
     <argument>-p</argument>
     <argument>yfiles.YFilesLayoutPlugin</argument>
+    <argument>-p</argument>
+    <argument>cytoscape.genomespace.libs.GenomeSpaceLibsPlugin</argument>
+    <argument>-p</argument>
+    <argument>cytoscape.genomespace.GenomeSpacePlugin</argument>
   </application-desc>
 </jnlp>
 
